succesful install of tailwind, save here and make a branch before i mess it up trying to install prettier and the code formatter for tailwind css.   that way I can make parts here and clean them up before turning them in somewhere else.   I can write code faster with tailwind and the break it down to css where need,  Not everyone likes tailwind,

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,8 +1,21 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /**
  * CSS files with the .module.css suffix will be treated as CSS modules
  * and scoped locally.
  */
-
+ .buttonTrial {
+  background-color: orange;
+  color: red;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  margin-right: 1rem;
+  text-decoration: none;
+  width:full;
+  height: 40px;
+}
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
@@ -16,8 +29,8 @@
   }
 }
 
-.buttons {
+/* .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
