--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -2,8 +2,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-
-
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
@@ -12,26 +10,26 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: rgb(146, 141, 141);
+  --ifm-color-primary-dark: rgb(135, 133, 133);
+  --ifm-color-primary-darker: rgb(116, 113, 113);
+  --ifm-color-primary-darkest: rgb(92, 88, 88);
+  --ifm-color-primary-light: rgb(135, 133, 133);
+  --ifm-color-primary-lighter: rgb(174, 171, 171);
+  --ifm-color-primary-lightest: rgb(199, 197, 197);
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme="dark"] {
+  --ifm-color-primary: #1f2f2b;
+  --ifm-color-primary-dark: #1c2a27;
+  --ifm-color-primary-darker: #101715;
+  --ifm-color-primary-darkest: #040605;
+  --ifm-color-primary-light: #163831;
+  --ifm-color-primary-lighter: #1c463e;
+  --ifm-color-primary-lightest: #276256;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
@@ -41,39 +39,32 @@
 }
 
 .buttonTrial {
-  
- 
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   margin: 0 auto;
-  width:fit-content;
+  width: fit-content;
   text-shadow: 2px 2px 4px #000000;
 }
- .gorilla {
+.gorilla {
   text-shadow: 2px 2px 4px #000000;
- }
-
+}
 
 .homeTitle {
-   
   font-weight: bold;
-   
+
   text-align: center;
   text-shadow: 2px 2px 4px #000000;
-  
-  
 }
 .hr5 {
   border: 2px solid black;
   height: 5px;
   background-color: greenyellow;
-  
+
   margin: 0 auto;
   margin-top: 10px;
   margin-bottom: -10px;
-  border-radius:12px;
-
-   }
+  border-radius: 12px;
+}
 .hr4 {
   border: 2px solid black;
   height: 5px;
@@ -82,6 +73,5 @@
   margin: 0 auto;
   margin-top: 10px;
   margin-bottom: -10px;
-  border-radius:12px;
-
-   }
+  border-radius: 12px;
+}
