figuring out the svg with transparency, how to reduce file size,  band white is way mucho grande better

--- a/src/components/GorillaFolder/Gorilla.css
+++ b/src/components/GorillaFolder/Gorilla.css
@@ -11,3 +11,12 @@
 .gorilla {
   text-shadow: 2px 2px 4px #000000;
 }
+ 
+      .cls-1, .cls-2 {
+        stroke-width: 0px;
+      }
+
+      .cls-2 {
+        fill: #fff;
+      }
+   
