--- a/src/components/ToolBoxFolder/ToolBox.css
+++ b/src/components/ToolBoxFolder/ToolBox.css
@@ -2,6 +2,7 @@
     animation: openDrawerAnimation .5s ease-in-out;
     box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.5);
     text-shadow: 1px 1px 1px #000;
+    border: 1px solid black;
 }
 
 
