--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -32,7 +32,24 @@
   --ifm-color-primary-lightest: #276256;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
-
+.headerGorillaBottom {
+  transform: scaleX(-1);
+  font-size: 38px;
+  position: fixed;
+  left:10rem;
+  top: .5rem;
+}
+.headerGorillaTop {
+ 
+  font-size: 38px;
+  position: fixed;
+  left:15rem;
+  top: .5rem;
+  
+}
+.headerGorillaScroll{
+  scroll-margin-top: 5.5rem;
+}
 .containerTop {
   text-shadow: 2px 2px 4px #000000;
   color: white;
