--- a/src/components/ToolBoxFolder/ToolBox.css
+++ b/src/components/ToolBoxFolder/ToolBox.css
@@ -1,32 +1,45 @@
 .openDrawer {
-    animation: openDrawerAnimation .5s ease-in-out;
-    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.5);
-    box-shadow:  0px 0px 1px 2px rgba(0, 0, 0, 0.5);
-    text-shadow: 1px 1px 1px #000;
-    border: 1px solid black;
+  animation: openDrawerAnimation .5s ease-in-out;
+  box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.5);
+  box-shadow:  0px 0px 1px 2px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 1px #000;
+  border: 1px solid black;
+  background-color: #24558d;
 }
- .outerOpenDrawer {
-  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.9);
-  width: 100%;
-  border:1px solid black;
-  border-radius: 7px;
- }
+.outerOpenDrawer {
+ 
+width: 100%;
+
+
+}
+.toolBoxDrawers {
+box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.9);
+width: 100%;
+border:1px solid black;
+border-radius: 7px;
+}
 
 .directoryTop {
-    box-shadow: inset 0px 0px 3px 2px rgba(0, 0, 0, 0.5);
-    text-shadow: 1px 1px 1px #000;
-    
+  box-shadow: inset 0px 0px 3px 2px rgba(0, 0, 0, 0.5);
+  text-shadow: 1px 1px 1px #000;
 }
+  
+  @media screen and (max-width:640px) {
+    .toolBoxMedia{
+      display: none;
+    }
+}
+
 @keyframes openDrawerAnimation {
-    0% {
-      transform: scaleY(0);
-    }
-    80% {
-      transform: scaleY(1.2);
-    }
-    100% {
-      transform: scaleY(1);
-    }
+  0% {
+    transform: scaleY(0);
   }
-  
-  
+  80% {
+    transform: scaleY(1.2);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+
