--- a/src/components/ToolBoxFolder/ToolBox.css
+++ b/src/components/ToolBoxFolder/ToolBox.css
@@ -1,33 +1,40 @@
 .openDrawer {
-  animation: openDrawerAnimation .5s ease-in-out;
+  animation: openDrawerAnimation 0.5s ease-in-out;
   box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.5);
-  box-shadow:  0px 0px 1px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.5);
   text-shadow: 1px 1px 1px #000;
   border: 1px solid black;
   background-color: #24558d;
 }
 .outerOpenDrawer {
- 
-width: 100%;
-
-
+  width: 100%;
 }
 .toolBoxDrawers {
-box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.9);
-width: 100%;
-border:1px solid black;
-border-radius: 7px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0.5rem 0.75rem 0.5rem;
+  cursor: pointer;
+  margin: 0.5rem 0rem 0.5rem 0rem;
+  box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.9);
+  width: 100%;
+  border: 1px solid black;
+
+  border-left: 2px solid transparent;
+
+  border-bottom-right-radius: 8px;
+  border-top-right-radius: 8px;
 }
 
 .directoryTop {
   box-shadow: inset 0px 0px 3px 2px rgba(0, 0, 0, 0.5);
   text-shadow: 1px 1px 1px #000;
 }
-  
-  @media screen and (max-width:640px) {
-    .toolBoxMedia{
-      display: none;
-    }
+
+@media screen and (max-width: 640px) {
+  .toolBoxMedia {
+    display: none;
+  }
 }
 
 @keyframes openDrawerAnimation {
@@ -41,5 +48,3 @@ border-radius: 7px;
     transform: scaleY(1);
   }
 }
-
-
